# cinderella-screen

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: pull_request.yml  release.yml
res/: resource.h  ui.manifest.in  ui.rc.in
src/: actions.cc  actions.h  app_state.cc  app_state.h  console.hpp  defines.hpp  fullscreen.cc  fullscreen.h  hotkeys.cc  hotkeys.h  idle_cursor.cc  idle_cursor.h  main.cc  ui.cc  ui.h  window_helper.cc  window_helper.h  window_tray_icon.cc  window_tray_icon.h
src/capture/: CMakeLists.txt  capture.cc  capture.h  capture_item.cc  capture_item.h  capture_utility.hpp  completion_source.hpp  context.cc  context.h  device_codec.cc  device_codec.h  device_d2d.cc  device_d2d.h  device_d3d.cc  device_d3d.h  device_direct3d11.cc  device_direct3d11.h  dxgi_interface.hpp  image_encode.cc  image_encode.h  session.cc  session.h  snapshot.cc  snapshot.h  stream.cc  stream.h  surface_direct3d11.cc  surface_direct3d11.h  surface_direct3d11.hpp  winrt_base.hpp
src/core/: CMakeLists.txt  winrt_context.cc  winrt_context.h
tests/: CMakeLists.txt  fullscreen_test.cc
